# resLoadSIM

./: AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  LICENSE  todo
example/: resLoadSIM.json
example/countries/AT/: households.json  public_holidays.json  table_weekday  tech.json  vacation.json
example/countries/DE/: table_sunday
example/countries/NL/: table_saturday
example/locations/Amsterdam/: location.json
example/locations/Berlin/: location.json
example/locations/Copenhagen/: location.json
example/locations/Hannover/: location.json
example/locations/Oslo/: location.json
example/locations/Rome/: location.json
example/locations/Ulm/: location.json
example/locations/Vienna/: Timeseries_48.208_16.373_SA.csv  location.json
example/locations/Warsaw/: location.json
include/: appliance.H  battery.H  clock.H  configuration.H  constants.H  element.H  globals.H  heatsource.H  heatstorage.H  household.H  jsmn.h  location.H  output.H  powerflow.H  producer.H  proto.H  solarcollector.H  solarmodule.H  types.H
src/: aircond.cpp  appliance.cpp  arguments.cpp  battery.cpp  boiler.cpp  circpump.cpp  clock.cpp  computer.cpp  configuration.cpp  dishwasher.cpp  e_stove.cpp  e_vehicle.cpp  element.cpp  equality.cpp  file.cpp  freezer.cpp  fridge.cpp  gas_stove.cpp  heating.cpp  heatpump.cpp  heatsource.cpp  heatstorage.cpp  household.cpp  light.cpp  location.cpp  main.cpp  output.cpp  powerflow.cpp  producer.cpp  random.cpp  solarcollector.cpp  solarmodule.cpp  tumbledryer.cpp  tv.cpp  vacuum.cpp  washing.cpp
